[gd_scene load_steps=16 format=2]

[ext_resource path="res://Assets/UI/Buttons/red_button09.png" type="Texture" id=1]
[ext_resource path="res://Assets/UI/Buttons/blue_button12.png" type="Texture" id=2]
[ext_resource path="res://Assets/Towers/towerDefense_tile249.png" type="Texture" id=3]
[ext_resource path="res://Assets/Towers/towerDefense_tile251.png" type="Texture" id=4]
[ext_resource path="res://Scenes/MainScenes/GameScene.gd" type="Script" id=5]
[ext_resource path="res://Scenes/MainScenes/UI.gd" type="Script" id=6]
[ext_resource path="res://Assets/Icons/right.png" type="Texture" id=7]
[ext_resource path="res://Assets/Icons/pause.png" type="Texture" id=8]
[ext_resource path="res://Assets/Icons/fastForward.png" type="Texture" id=9]
[ext_resource path="res://Resources/Fonts/KFN_50_outline1.tres" type="DynamicFont" id=10]
[ext_resource path="res://Resources/Fonts/KFN_30_outline1.tres" type="DynamicFont" id=11]
[ext_resource path="res://Assets/UI/HPbar.jpg" type="Texture" id=12]
[ext_resource path="res://Assets/Icons/home.png" type="Texture" id=13]
[ext_resource path="res://Scenes/MainScenes/EnemyManager.gd" type="Script" id=14]
[ext_resource path="res://Scenes/MainScenes/TurretManager.gd" type="Script" id=15]

[node name="GameScene" type="Node2D"]
script = ExtResource( 5 )
__meta__ = {
"_edit_lock_": true
}

[node name="TurretManager" type="Node2D" parent="."]
script = ExtResource( 15 )

[node name="EnemyManager" type="Node2D" parent="."]
script = ExtResource( 14 )

[node name="Timer" type="Timer" parent="EnemyManager"]

[node name="UI" type="CanvasLayer" parent="."]
script = ExtResource( 6 )

[node name="HUD" type="Control" parent="UI"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 3.0
margin_top = 2.0
margin_right = 3.0
margin_bottom = 2.0
mouse_filter = 2

[node name="BuildBar" type="VBoxContainer" parent="UI/HUD"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -400.0
margin_right = 100.0
rect_min_size = Vector2( 100, 400 )
custom_constants/separation = 25

[node name="Gun" type="TextureButton" parent="UI/HUD/BuildBar" groups=["build_buttons"]]
margin_left = 10.0
margin_right = 90.0
margin_bottom = 80.0
rect_min_size = Vector2( 80, 80 )
size_flags_horizontal = 4
size_flags_vertical = 4
texture_normal = ExtResource( 2 )
texture_disabled = ExtResource( 1 )
expand = true

[node name="Icon" type="TextureRect" parent="UI/HUD/BuildBar/Gun"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 10.0
margin_right = -10.0
margin_bottom = -10.0
texture = ExtResource( 3 )
expand = true

[node name="Missile" type="TextureButton" parent="UI/HUD/BuildBar" groups=["build_buttons"]]
margin_left = 10.0
margin_top = 105.0
margin_right = 90.0
margin_bottom = 185.0
rect_min_size = Vector2( 80, 80 )
size_flags_horizontal = 4
size_flags_vertical = 4
texture_normal = ExtResource( 2 )
texture_disabled = ExtResource( 1 )
expand = true

[node name="Icon" type="TextureRect" parent="UI/HUD/BuildBar/Missile"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 10.0
margin_right = -10.0
margin_bottom = -10.0
texture = ExtResource( 4 )
expand = true

[node name="GameControls" type="HBoxContainer" parent="UI/HUD"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -164.0
margin_top = -90.0
margin_right = -20.0
margin_bottom = -20.0
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="PausePlay" type="TextureButton" parent="UI/HUD/GameControls"]
pause_mode = 2
margin_right = 70.0
margin_bottom = 70.0
rect_min_size = Vector2( 70, 70 )
toggle_mode = true
texture_normal = ExtResource( 7 )
texture_pressed = ExtResource( 8 )
expand = true

[node name="SpeedUp" type="TextureButton" parent="UI/HUD/GameControls"]
margin_left = 74.0
margin_right = 144.0
margin_bottom = 70.0
rect_min_size = Vector2( 70, 70 )
texture_normal = ExtResource( 9 )
expand = true

[node name="InfoBar" type="ColorRect" parent="UI/HUD"]
self_modulate = Color( 0, 0, 0, 0.470588 )
anchor_right = 1.0
rect_min_size = Vector2( 0, 60 )

[node name="H" type="HBoxContainer" parent="UI/HUD/InfoBar"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Symbol" type="Label" parent="UI/HUD/InfoBar/H"]
margin_right = 120.0
margin_bottom = 60.0
rect_min_size = Vector2( 120, 60 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 0.705882 )
custom_fonts/font = ExtResource( 10 )
text = "$"
align = 2
valign = 1

[node name="Money" type="Label" parent="UI/HUD/InfoBar/H"]
margin_left = 124.0
margin_right = 234.0
margin_bottom = 60.0
rect_min_size = Vector2( 110, 60 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 0.705882 )
custom_fonts/font = ExtResource( 11 )
text = "100"
align = 2
valign = 1

[node name="Spacer" type="Label" parent="UI/HUD/InfoBar/H"]
margin_left = 238.0
margin_right = 348.0
margin_bottom = 60.0
rect_min_size = Vector2( 110, 60 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 0.705882 )
custom_fonts/font = ExtResource( 11 )
align = 2
valign = 1

[node name="WaveLabel" type="Label" parent="UI/HUD/InfoBar/H"]
margin_left = 352.0
margin_right = 462.0
margin_bottom = 60.0
rect_min_size = Vector2( 110, 60 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 0.705882 )
custom_fonts/font = ExtResource( 11 )
text = "WAVE:"
align = 2
valign = 1

[node name="Wave" type="Label" parent="UI/HUD/InfoBar/H"]
margin_left = 466.0
margin_right = 576.0
margin_bottom = 60.0
rect_min_size = Vector2( 110, 60 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 0.705882 )
custom_fonts/font = ExtResource( 11 )
text = "1"
align = 1
valign = 1

[node name="Spacer2" type="Label" parent="UI/HUD/InfoBar/H"]
margin_left = 580.0
margin_right = 690.0
margin_bottom = 60.0
rect_min_size = Vector2( 110, 60 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 0.705882 )
custom_fonts/font = ExtResource( 11 )
text = "of"
align = 1
valign = 1

[node name="TotalWaves" type="Label" parent="UI/HUD/InfoBar/H"]
margin_left = 694.0
margin_right = 804.0
margin_bottom = 60.0
rect_min_size = Vector2( 110, 60 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 0.705882 )
custom_fonts/font = ExtResource( 11 )
text = "X"
align = 1
valign = 1

[node name="Icon" type="TextureRect" parent="UI/HUD/InfoBar/H"]
margin_left = 808.0
margin_right = 868.0
margin_bottom = 60.0
rect_min_size = Vector2( 60, 60 )
size_flags_horizontal = 10
texture = ExtResource( 13 )
expand = true

[node name="HP" type="TextureProgress" parent="UI/HUD/InfoBar/H"]
margin_left = 872.0
margin_top = 15.0
margin_right = 1272.0
margin_bottom = 45.0
rect_min_size = Vector2( 400, 30 )
size_flags_horizontal = 4
size_flags_vertical = 4
value = 100.0
texture_under = ExtResource( 12 )
texture_progress = ExtResource( 12 )
tint_under = Color( 0.211765, 0.211765, 0.211765, 1 )
tint_progress = Color( 0.0392157, 0.976471, 0.0392157, 1 )
nine_patch_stretch = true

[node name="Tween" type="Tween" parent="UI/HUD/InfoBar/H/HP"]

[node name="Control" type="Control" parent="UI/HUD/InfoBar/H"]
margin_left = 1276.0
margin_right = 1346.0
margin_bottom = 60.0
rect_min_size = Vector2( 70, 0 )

[connection signal="pressed" from="UI/HUD/GameControls/PausePlay" to="UI" method="_on_PausePlay_pressed"]
[connection signal="pressed" from="UI/HUD/GameControls/SpeedUp" to="UI" method="_on_SpeedUp_pressed"]
